src/test/ui/issue-45199.ast.stderr
error[E0384]: cannot assign twice to immutable variable `b`
  --> $DIR/issue-45199.rs:19:5
   |
LL |     b = Box::new(1);    //[ast]~ NOTE first assignment
   |     --------------- first assignment to `b`
LL |                         //[mir]~^ NOTE first assignment
LL |     b = Box::new(2);    //[ast]~ ERROR cannot assign twice to immutable variable
   |     ^^^^^^^^^^^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `b`
  --> $DIR/issue-45199.rs:29:5
   |
LL |     let b = Box::new(1);    //[ast]~ NOTE first assignment
   |         - first assignment to `b`
...
LL |     b = Box::new(2);        //[ast]~ ERROR cannot assign twice to immutable variable
   |     ^^^^^^^^^^^^^^^ cannot assign twice to immutable variable

error[E0384]: cannot assign twice to immutable variable `b`
  --> $DIR/issue-45199.rs:37:5
   |
LL | fn test_args(b: Box<i32>) {  //[ast]~ NOTE first assignment
   |              - first assignment to `b`
LL |                                 //[mir]~^ NOTE consider changing this to `mut b`
LL |     b = Box::new(2);            //[ast]~ ERROR cannot assign twice to immutable variable
   |     ^^^^^^^^^^^^^^^ cannot assign twice to immutable variable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0384`.
